<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/from"
        android:id="@+id/textViewFrom"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/to"
        android:gravity="center"
        android:id="@+id/textViewTo"
        android:layout_below="@+id/textViewFrom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignRight="@+id/textViewFrom"
        android:layout_alignEnd="@+id/textViewFrom"
        android:layout_alignLeft="@+id/textViewFrom"
        android:layout_alignStart="@+id/textViewFrom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:background="@color/myBlue"
        android:textColor="@color/white"
        android:id="@+id/buttonDialogNext"
        android:layout_below="@+id/textViewTo"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>