<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="littleextracare.bifortis.com.activities.RegisterActivity">


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_button"
        android:id="@+id/scrollView2"
        android:layout_alignRight="@+id/login_button"
        android:layout_alignEnd="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/imageView2"
                android:src="@drawable/profile_icon"
                android:layout_below="@+id/button5"
                android:layout_above="@+id/editText5"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText5"
                android:hint="@string/edittext_name"
                android:paddingLeft="10dp"
                android:layout_above="@+id/editText4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:paddingLeft="10dp"
                android:hint="@string/edittext_lastname"
                android:layout_above="@+id/editText3"
                android:layout_alignRight="@+id/editText3"
                android:layout_alignEnd="@+id/editText3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmail"
                android:hint="E-mail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:paddingLeft="10dp"
                android:hint="@string/edittext_description"
                android:layout_above="@+id/editText2"
                android:layout_alignRight="@+id/editText2"
                android:layout_alignEnd="@+id/editText2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:paddingLeft="10dp"
                android:hint="@string/edittext_zipcode"
                android:id="@+id/editText2"
                android:layout_above="@+id/editText"
                android:layout_alignRight="@+id/editText"
                android:layout_alignEnd="@+id/editText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:minLines="2"
                android:lines="2"
                android:paddingLeft="10dp"
                android:id="@+id/editText"
                android:hint="@string/edittext_address"
                android:layout_above="@+id/button6"
                android:layout_alignRight="@+id/button5"
                android:layout_alignEnd="@+id/button5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="RtlHardcoded" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/button6"
                android:onClick="registerButtonClicked"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
